--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ body {
   font-style: normal;
     text-align: center;
     font-size: 14px;
+	padding: 10mm 0;
 }
 
 p {
@@ -122,8 +123,6 @@ main {
     padding: 10mm;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 10mm;
-    margin-bottom: 10m;
 }
 
 img.logo  {
